@@ -1,3 +1,7 @@
+  04 Oct 2019; Agostino Sarubbo <ago@gentoo.org>
+  -dappersec-sources-4.9.131.ebuild, -dappersec-sources-4.9.132.ebuild:
+  sys-kernel/dappersec-sources: Remove old
+
 *dappersec-sources-4.9.135 (26 Oct 2018)
 
   26 Oct 2018;  <ago@gentoo.org> +dappersec-sources-4.9.135.ebuild:
